# pubky-hs-inspect

./: .gitignore  Cargo.toml  README.md
.agents_tmp/: PLAN.md
.github/workflows/: ci.yml
src/: cli.rs  client.rs  commands.rs  error.rs  lib.rs  main.rs
src/commands/: events.rs  events_stream.rs  inspect.rs  inspect_user.rs  ls.rs  mod.rs  pkdns.rs  read.rs  shared.rs  storage.rs
tests/: integration.rs
