[package]
name = "pubky-hs-inspect"
version = "0.1.0"
edition = "2021"
description = "CLI tool for inspecting Pubky homeserver instances"
authors = ["pubky-hs-inspect contributors"]
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
pubky = { version = "0.7", features = ["json"] }
pkarr = "=5.0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "3"
url = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
bytes = "1"

[dev-dependencies]
pubky-testnet = { version = "0.7", features = ["embedded-postgres"] }
